fixed modal layout issue

--- a/components/common/modals/base.module.css
+++ b/components/common/modals/base.module.css
@@ -18,6 +18,7 @@
   height: fit-content;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   border-radius: 8px;
+  padding-bottom: 20px;
 }
 
 @media screen and (max-width: 410px) {
