--- a/components/main/search-overlay-assets/index.module.css
+++ b/components/main/search-overlay-assets/index.module.css
@@ -77,7 +77,11 @@
 }
 
 .share-landing-search{
-
+    position: relative;
+    top: 0;
+    right: 100%;
+    /* transform: translate(60%);  */
+    transform: translate(0);
 }
 
 @media screen and (max-width: 690px) {
@@ -86,16 +90,45 @@
     }
 
     .share-landing-search{
-        right: 0;
+        top: 0;
+        width: 100%;
+        max-width: 100vw;
+        box-shadow: none;
+        border-radius: 0;
+        height: 36px;
+        /* right: 0; */
+        /* position: fixed; */
+        z-index: 200;
     }
 }
 
-@media screen and (min-width: 600px) and (max-width: 1200px) {
+@media screen and (min-width: 600px) and (max-width: 1281px) {
     .share-landing-search{
-        top:20px;
+        top:0;
         width: 400px;
-        right: 0;
-        transform: translateX(30%);
+        right: 30%;
+        transform: translate(400px, -110px);
+    }
+}
+
+@media screen and (min-width: 601px) and (max-width: 810px) {    
+    .share-landing-search{
+        top:0;
+        width: 400px;
+        right: 50%;
+        transform: translate(40%);
+    }
+}
+
+@media screen and (max-width: 500px) {    
+    .share-landing-search{
+        top: 0;
+        width: 100vw;
         position: absolute;
+        /* width: 400px; */
+        /* right: 50%;
+        transform: translate(40%); */
+        transform: translate(55%, -160%);
+        z-index: -1
     }
 }
